--- a/frontend-modules/angular/views/nodeDetail/pdf-comment.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-comment.html
@@ -1,5 +1,10 @@
 <div class="box box-solid">
+
     <div class="box-body">
+        <div class="privacy-icon" ng-show="showEditButton">
+            <i class="fa fa-lock private" ng-show="isPrivate === true"></i>
+            <i class="fa fa-unlock public" ng-show="isPrivate !== true"></i>
+        </div>
         <span class="posted-at">
       Posted <strong>{{postedDate | relativeDate}}</strong>
       By <strong>
