--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -113,7 +113,7 @@
                title="Search"
                ng-model="queryText"
                ng-change="lookupInTree()"
-               placeholder="Search..."/>
+               placeholder="Search map..."/>
     </div>
 
     <div class="tree-container">
