show/hide personal annotations in PDF

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -35,7 +35,7 @@
             <div class="checkbox">
                 <label style="color: white">
                     <input type="checkbox" ng-model="config.countMap.isPersonal" ng-change="isAMapPersonalChange()">
-                    Show my annotations only
+                    Show only my annotations
                 </label>
             </div>
         </div>
