--- a/views/admin-lte/course/peerAssessment/solution/pages/seeAllSolutions.ejs
+++ b/views/admin-lte/course/peerAssessment/solution/pages/seeAllSolutions.ejs
@@ -13,7 +13,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="solution in solutions" ng-click="viewSolution(solution)">
+            <tr ng-repeat="solution in solutions" ng-click="viewSolution(solution._id)">
                 <td>{{solution.title}}</td>
                 <td>{{solution.peerReviewTitle}}</td>
                 <td>{{solution.studentName}}</td>
