--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -101,13 +101,14 @@
 <div class="box-body no-border" id="tree" ng-controller="MapController">
 
     <div class="course-control">
-        <button data-tooltip="tooltip" title="Center Map"
-                class="btn btn-default btn-sm" onclick="Canvas.putOnCenter(true)">
-            <i class="ionicons ion-android-locate"></i>
-        </button>
         <button data-tooltip="tooltip" title="Information"
                 class="btn btn-default btn-sm" ng-click="showMapInfo()">
             <i class="ionicons ion-information"></i>
+        </button>
+
+        <button data-tooltip="tooltip" title="Center Map"
+                class="btn btn-default btn-sm" onclick="Canvas.putOnCenter(true)">
+            <i class="ionicons ion-android-locate"></i>
         </button>
         <input type="search" class="form-control search-box"
                title="Search"
@@ -116,11 +117,34 @@
                placeholder="Search map..."/>
     </div>
 
+    <div style="position: absolute;bottom: 10px;right: 20px;z-index: 5;">
+
+        <label class="pull-right"> Zoom
+            <input type="range" min="0.5" max="1.5" step="0.1"
+                   placeholder="Zoom"
+                   tooltip="Zoom"
+                   list="zoomSettings"
+                   oninput="Canvas.zoomChanged(this.value)" onchange="Canvas.zoomChanged(this.value)">
+            <datalist id="zoomSettings">
+                <option>0.5</option>
+                <option>0.6</option>
+                <option>0.7</option>
+                <option>0.8</option>
+                <option>0.9</option>
+                <option>1.0</option>
+                <option>1.1</option>
+                <option>1.2</option>
+                <option>1.3</option>
+                <option>1.4</option>
+                <option>1.5</option>
+            </datalist>
+        </label>
+    </div>
+
     <div class="tree-container">
         <div class="course-map" id="course-map">
-
-            <div ng-repeat="data in treeNodes" ng-include="'tree_item_renderer.html'" on-finish-render="jsTreeInit">
-            </div>
+            <div ng-repeat="data in treeNodes" ng-include="'tree_item_renderer.html'"
+                 on-finish-render="jsTreeInit"></div>
 
             <div class="center-course" id="center" data-shape="Rectangle">
                 {{course.name}}
@@ -274,6 +298,10 @@
             else
             // put it on the center
                 self.el.css(self.centerCss);
+        },
+
+        zoomChanged: function (value) {
+            this.el.animate({'zoom': value}, 0);
         },
 
         onWindowResize: function (w, h) {
