--- a/views/admin-lte/course/peerAssessment/peerReview/pages/viewAssignment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/pages/viewAssignment.ejs
@@ -31,7 +31,7 @@
                                     <label class="col-sm-5 control-label">Review Documents</label>
                                     <div class="col-sm-6 control-label" style="text-align: left;">
                                         <div class="label label-info" ng-repeat="doc in viewReview.displayDocumentsList">
-                                            <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                            <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
                                         </div>
                                     </div>
                                 </div>
@@ -75,7 +75,7 @@
                                     <label class="col-sm-5 control-label">Sample Solutions</label>
                                     <div class="col-sm-6 control-label" style="text-align: left;">
                                         <div class="label label-info" ng-repeat="doc in viewReview.displaySolutionsList">
-                                            <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                            <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
                                         </div>
                                     </div>
                                 </div>
