--- a/views/admin-lte/course/peerAssessment/review/pages/review.ejs
+++ b/views/admin-lte/course/peerAssessment/review/pages/review.ejs
@@ -8,12 +8,14 @@
             <tr>
                 <th>Review Task Title</th>
                 <th>Student Review Title</th>
+                <th>Review Loop</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="review in reviews">
                 <td>{{review.peerReviewId.title}}</td>
                 <td><a href="" ng-click="openReview(review, $event)">{{review.isSubmitted?'Edit Review': 'Add Review'}}</a></td>
+                <td>{{review.loop?review.loop: 'First'}}</td>
             </tr>
             </tbody>
         </table>
