--- a/views/admin-lte/course/peerAssessment/peerReview/pages/editAssignment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/pages/editAssignment.ejs
@@ -60,7 +60,7 @@
                                                         </div>
                                                         <div ng-repeat="doc in newAssignObj.displayDocumentsList">
                                                             <div class="label label-info">
-                                                                <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
+                                                                <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
                                                             </div>
                                                             &nbsp;
                                                             <a href="" ng-click="deleteUploadedFiles(doc.link)"> <i class="ion-close-round"></i></a>
@@ -131,7 +131,7 @@
                                                         </div>
                                                         <div ng-repeat="doc in newAssignObj.displaySolutionsList">
                                                             <div class="label label-info">
-                                                                <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
+                                                                <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
                                                             </div>
                                                             &nbsp;
                                                             <a href="" ng-click="deleteUploadedSolutions(doc.link)"> <i class="ion-close-round"></i></a>
