--- a/views/admin-lte/course/peerAssessment/review/modals/viewReviewModal.ejs
+++ b/views/admin-lte/course/peerAssessment/review/modals/viewReviewModal.ejs
@@ -15,31 +15,64 @@
                     </div>
                     <div class="box-body form-horizontal horizontal-max">
                         <!--<form class="form-horizontal horizontal-max" name="addAssignmentForm" role="form" ng-submit="saveNewPost(addAssignmentForm.$valid)" novalidate>-->
-
-                        <fieldset>
-                            <div class="form-group">
-                                <label class="col-sm-5 control-label">Comments</label>
-                                <div class="col-sm-6 control-label" style="text-align: left;">
-                                    <label style="font-weight: normal">{{peerReview.comments}}</label>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-5 control-label">Obtained Marks</label>
-                                <div class="col-sm-6 control-label" style="text-align: left;">
-                                    <label style="font-weight: normal">{{peerReview.marksObtained}}</label>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-5 control-label">Review Documents</label>
-                                <div class="col-sm-6 control-label" style="text-align: left;">
-                                    <div class="label label-info" ng-repeat="doc in peerReview.displayDocumentsList">
-                                        <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">{{peerReview.isSecondLoop?'Second Review':'Review'}}</div>
+                            <div class="panel-body">
+                                <fieldset>
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Comments</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <label style="font-weight: normal">{{peerReview.comments}}</label>
+                                        </div>
                                     </div>
-                                </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Obtained Marks</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <label style="font-weight: normal">{{peerReview.marksObtained}}</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Review Documents</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <div class="label label-info" ng-repeat="doc in peerReview.displayDocumentsList">
+                                                <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
                             </div>
-                        </fieldset>
+                        </div>
+                        <div class="panel panel-default" ng-if="firstReview">
+                            <div class="panel-heading">First Review</div>
+                            <div class="panel-body">
+                                <fieldset>
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Comments</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <label style="font-weight: normal">{{firstReview.comments}}</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Obtained Marks</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <label style="font-weight: normal">{{firstReview.marksObtained}}</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-5 control-label">Review Documents</label>
+                                        <div class="col-sm-6 control-label" style="text-align: left;">
+                                            <div class="label label-info" ng-repeat="doc in firstReview.displayDocumentsList">
+                                                <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </div>
+                        </div>
                         <!--</form>-->
                     </div>
                 </div>
