--- a/views/admin-lte/course/peerAssessment/review/pages/viewFeedback.ejs
+++ b/views/admin-lte/course/peerAssessment/review/pages/viewFeedback.ejs
@@ -23,7 +23,7 @@
                                             <label class="col-sm-5 control-label">Review Documents</label>
                                             <div class="col-sm-6 control-label" style="text-align: left;">
                                                 <div class="label label-info" ng-repeat="doc in review.displayDocumentsList">
-                                                    <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                                    <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
                                                 </div>
                                             </div>
                                         </div>
