--- a/views/admin-lte/course/peerAssessment/solution/modals/addEditSolutionModal.ejs
+++ b/views/admin-lte/course/peerAssessment/solution/modals/addEditSolutionModal.ejs
@@ -59,7 +59,7 @@
                                             </div>
                                             <div ng-repeat="doc in solutionObj.displayDocumentsList">
                                                 <div class="label label-info">
-                                                    <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
+                                                    <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp;</a>
                                                 </div>
                                                 &nbsp;
                                                 <a href="" ng-click="deleteUploadedFiles(doc.link)"> <i class="ion-close-round"></i></a>
