--- a/views/admin-lte/course/peerAssessment/solution/pages/viewSolution.ejs
+++ b/views/admin-lte/course/peerAssessment/solution/pages/viewSolution.ejs
@@ -32,7 +32,7 @@
                                 <div class="col-sm-6 control-label" style="text-align: left;">
                                     <label style="font-weight: normal" ng-if="solution.solutionDocuments.length == 0">No documents avalaible!</label>
                                     <div class="label label-info" ng-repeat="doc in solution.displayDocumentsList">
-                                        <a href="{{doc.link}}" target="_blank" style="color: white"> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
+                                        <a href="{{doc.link}}" target="_blank" style="color: white" download> &nbsp; <span>{{doc.name}}</span> &nbsp; <br></a>
                                     </div>
                                 </div>
                             </div>
